# Reservoir-Computing-for-Brain-Computer-Interface-Decoding

./: README.md  analysis_dataset_1.ipynb  analysis_dataset_1_v2.ipynb  analysis_dataset_1_v2_all_subjects_optuna.ipynb  analysis_dataset_1_v3_smaller_mov_imagination.ipynb  pyproject.toml
