[project]
name = "reservoir-computing-for-brain-computer-interface-decoding"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=7.1.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.7",
    "numpy>=2.3.5",
    "optuna>=4.6.0",
    "pip>=25.3",
    "pyrcn>=0.0.18",
    "scikit-learn==1.5.2",
    "scipy>=1.16.3",
]
